style.css
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    font-family: "FingerPaint";
}

header {
    height: 100px;
    color: white;
    background-color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

main {
    margin-left: auto;
    margin-right: auto;
    min-height: 100vh;

    display: flex;
    justify-content: center;
    align-items: center;
}

footer {
    height: 100px;
    color: white;
    background-color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

h1 {
    font-size: 56px;
    text-align: center;
}

.background-layer-one {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url("./assets/sprites/environments/Backgrounds/SunnyLandForest/background.png");
    background-size: cover;
    background-position: bottom;
}

.background-layer-two {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url("./assets/sprites/environments/Backgrounds/SunnyLandForest/middleground.png");
    background-size: cover;
    background-position: bottom;
}

.game-canvas {
    width: 720px;
    height: 480px;
    background-color: black;
}

